--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,6 +10,15 @@ label {
   width: 100px;
 }
 
+div {
+  margin-top: 24px;
+}
+
+button {
+  margin: 12px;
+  margin-left: 0;
+}
+
 input {
   width: 500px;
   padding: 5px;
@@ -37,6 +46,8 @@ h3 {
   font-weight: normal;
   color: #AAA;
   font-size: 24px;
+  line-height: 36px;
+  margin: 0px;
 }
 
 .black {
@@ -45,6 +56,10 @@ h3 {
 
 #balance {
   color: black;
+}
+
+#status {
+  color: coral;
 }
 
 .hint {
